// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MODULE | ActionCard component renders correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#F4F6F8",
          "borderRadius": 20,
          "borderWidth": 1,
          "elevation": 2,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          {
            "color": "black",
            "fontFamily": "PublicSans-SemiBold",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 19,
            "paddingTop": 16,
            "textAlign": "center",
          }
        }
      />
      <View
        style={
          {
            "padding": 16,
          }
        }
      />
      <View
        style={
          {
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#F4F6F8",
              "height": 1,
              "marginVertical": 32,
              "width": "100%",
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "paddingBottom": 32,
            }
          }
        >
          <View>
            <Text>
              Test
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`MODULE | ActionCard component renders correctly in disabled state 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F9FAFB",
          "borderColor": "#E5EAEE",
          "borderRadius": 20,
          "borderWidth": 1,
          "elevation": 2,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          {
            "color": "black",
            "fontFamily": "PublicSans-SemiBold",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 19,
            "paddingTop": 16,
            "textAlign": "center",
          }
        }
      />
      <View
        style={
          {
            "padding": 16,
          }
        }
      />
      <View
        style={
          {
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#F4F6F8",
              "height": 1,
              "marginVertical": 32,
              "width": "100%",
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "paddingBottom": 32,
            }
          }
        >
          <View>
            <Text>
              Test
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`MODULE | ActionCard fires callback on button press 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#F4F6F8",
          "borderRadius": 20,
          "borderWidth": 1,
          "elevation": 2,
          "width": "100%",
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "alignSelf": undefined,
            "backgroundColor": "transparent",
            "borderRadius": 0,
            "bottom": undefined,
            "end": undefined,
            "flex": undefined,
            "height": undefined,
            "left": undefined,
            "opacity": undefined,
            "position": "absolute",
            "right": 16,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
            "start": undefined,
            "top": 16,
            "transform": undefined,
            "width": undefined,
          }
        }
        testID="mockedTestID-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 0,
              "borderStyle": "solid",
              "borderWidth": 0,
              "flex": undefined,
              "minWidth": 64,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="mockedTestID-container"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                false,
                {
                  "borderRadius": 0,
                },
              ]
            }
            testID="mockedTestID"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "fontFamily": "PublicSans-Regular",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                        "textAlign": "center",
                      },
                      false,
                      {
                        "marginHorizontal": 12,
                      },
                      undefined,
                      false,
                      {
                        "color": "rgba(103, 80, 164, 1)",
                        "fontFamily": "PublicSans-Regular",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#18A586",
                        "fontFamily": "PublicSans-Regular",
                        "fontSize": 16,
                        "lineHeight": 19,
                        "marginHorizontal": 0,
                        "marginVertical": 0,
                        "padding": 12,
                      },
                    ],
                  ]
                }
                testID="mockedTestID-text"
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight="20"
                  bbWidth="20"
                  fill="#212B36"
                  focusable={false}
                  height="20"
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      {
                        "flex": 0,
                        "height": 20,
                        "width": 20,
                      },
                    ]
                  }
                  vbHeight={1024}
                  vbWidth={1024}
                  width="20"
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4280363830,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M512 1024c-282.77 0-512-229.233-512-512 0-282.77 229.23-512 512-512 282.767 0 512 229.23 512 512 0 282.767-229.233 512-512 512zM343.404 270.996c-19.995-19.995-52.413-19.995-72.408 0s-19.995 52.413 0 72.408l170.396 170.398-170.439 170.44c-19.995 19.994-19.995 52.408 0 72.407 19.995 19.994 52.413 19.994 72.408 0l170.437-170.44 170.44 170.44c19.999 19.994 52.413 19.994 72.412 0 19.994-19.999 19.994-52.413 0-72.407l-170.44-170.44 170.394-170.398c19.994-19.995 19.994-52.413 0-72.408s-52.413-19.995-72.407 0l-170.399 170.396-170.394-170.396z"
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "stroke",
                          "strokeWidth",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4280363830,
                          "type": 0,
                        }
                      }
                      strokeWidth="5"
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <Text
        style={
          {
            "color": "black",
            "fontFamily": "PublicSans-SemiBold",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 19,
            "paddingTop": 16,
            "textAlign": "center",
          }
        }
      />
      <View
        style={
          {
            "padding": 16,
          }
        }
      />
      <View
        style={
          {
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#F4F6F8",
              "height": 1,
              "marginVertical": 32,
              "width": "100%",
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "paddingBottom": 32,
            }
          }
        >
          <View>
            <Text>
              Test
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
